--- a/RoomWordSample/build.gradle
+++ b/RoomWordSample/build.gradle
@@ -29,10 +29,10 @@ task clean(type: Delete) {
 }
 
 ext {
-    roomVersion = '2.2.1'
-    archLifecycleVersion = '2.2.0-rc02'
+    roomVersion = '2.2.5'
+    archLifecycleVersion = '2.2.0'
     androidxArchVersion = '2.1.0'
     coreTestingVersion = "2.1.0"
-    coroutines = '1.3.2'
+    coroutines = '1.3.4'
     materialVersion = "1.0.0"
 }
